# signaldeck-core

./: pyproject.toml
signaldeck_core/: app_i.py  routes.py
signaldeck_core/domain/: processor_factory.py
signaldeck_core/services/: config_loader.py
