[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "signaldeck-core"
version = "0.4.0"
description = "SignalDeck core runtime"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "flask>=3.0",
  "signaldeck-sdk @ git+https://github.com/signaldeck/signaldeck-sdk.git@main",
  "signaldeck-ui@ git+https://github.com/signaldeck/signaldeck-ui.git@main",
  "python-crontab>=3.3.0"
]

[project.scripts]
signaldeck = "signaldeck_core.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["signaldeck_core*"]

[tool.setuptools.package-data]
signaldeck_core = [
  "templates/**/*"
]
